@@ -16,11 +16,13 @@
 package io.gravitee.rest.api.service.impl;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doReturn;
 
+import io.gravitee.common.data.domain.Page;
 import io.gravitee.repository.exceptions.TechnicalException;
 import io.gravitee.repository.management.api.ApplicationRepository;
+import io.gravitee.repository.management.api.search.ApplicationCriteria;
 import io.gravitee.repository.management.api.search.builder.SortableBuilder;
 import io.gravitee.repository.management.model.ApiKeyMode;
 import io.gravitee.repository.management.model.Application;
@@ -32,6 +34,8 @@ import io.gravitee.rest.api.model.MembershipReferenceType;
 import io.gravitee.rest.api.model.RoleEntity;
 import io.gravitee.rest.api.model.application.ApplicationListItem;
 import io.gravitee.rest.api.model.common.SortableImpl;
+import io.gravitee.rest.api.model.permissions.RolePermission;
+import io.gravitee.rest.api.model.permissions.RolePermissionAction;
 import io.gravitee.rest.api.model.permissions.RoleScope;
 import io.gravitee.rest.api.service.GroupService;
 import io.gravitee.rest.api.service.MembershipService;
@@ -40,10 +44,8 @@ import io.gravitee.rest.api.service.UserService;
 import io.gravitee.rest.api.service.common.GraviteeContext;
 import io.gravitee.rest.api.service.exceptions.TechnicalManagementException;
 import io.gravitee.rest.api.service.impl.ApplicationServiceImpl;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
+import org.assertj.core.util.Lists;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Test;
@@ -95,6 +97,9 @@ public class ApplicationService_FindByUserTest {
     @Mock
     private RoleService roleService;
 
+    @Mock
+    private RoleEntity primaryOwnerRole;
+
     @After
     public void tearDown() {
         GraviteeContext.cleanContext();
@@ -103,17 +108,23 @@ public class ApplicationService_FindByUserTest {
     @Test
     public void shouldFindByUser() throws Exception {
         GraviteeContext.setCurrentEnvironment("envId");
-        when(appMembership.getReferenceId()).thenReturn(APPLICATION_ID);
         when(application.getId()).thenReturn(APPLICATION_ID);
         when(application.getStatus()).thenReturn(ApplicationStatus.ACTIVE);
         when(application.getType()).thenReturn(ApplicationType.SIMPLE);
         when(application.getApiKeyMode()).thenReturn(ApiKeyMode.UNSPECIFIED);
 
-        when(membershipService.getMembershipsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION))
-            .thenReturn(Collections.singleton(appMembership));
-        when(applicationRepository.findByIds(Collections.singletonList(APPLICATION_ID), null))
-            .thenReturn(Collections.singleton(application));
-        when(application.getEnvironmentId()).thenReturn("envId");
+        when(
+            membershipService.getReferenceIdsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION)
+        )
+            .thenReturn(Collections.singleton(APPLICATION_ID));
+
+        ApplicationCriteria criteria = new ApplicationCriteria.Builder()
+            .ids(Set.of(APPLICATION_ID))
+            .environmentIds(Set.of(GraviteeContext.getExecutionContext().getEnvironmentId()))
+            .status(ApplicationStatus.ACTIVE)
+            .build();
+        when(applicationRepository.search(criteria, null, null)).thenReturn(new Page<>(List.of(application), 1, 1, 1));
+
         when(roleService.findPrimaryOwnerRoleByOrganization(any(), any())).thenReturn(mock(RoleEntity.class));
 
         MembershipEntity po = new MembershipEntity();
@@ -133,13 +144,6 @@ public class ApplicationService_FindByUserTest {
 
     @Test
     public void shouldNotFindByUserBecauseOfArchived() throws Exception {
-        when(appMembership.getReferenceId()).thenReturn(APPLICATION_ID);
-        when(application.getStatus()).thenReturn(ApplicationStatus.ARCHIVED);
-        when(membershipService.getMembershipsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION))
-            .thenReturn(Collections.singleton(appMembership));
-        when(applicationRepository.findByIds(Collections.singletonList(APPLICATION_ID), null))
-            .thenReturn(Collections.singleton(application));
-
         Set<ApplicationListItem> apps = applicationService.findByUser(GraviteeContext.getExecutionContext(), USERNAME);
 
         Assert.assertNotNull(apps);
@@ -149,7 +153,6 @@ public class ApplicationService_FindByUserTest {
     @Test
     public void shouldFindByUserAndGroup() throws Exception {
         GraviteeContext.setCurrentEnvironment("envId");
-        when(appMembership.getReferenceId()).thenReturn(APPLICATION_ID);
         when(groupAppMembership.getReferenceId()).thenReturn(GROUP_APPLICATION_ID);
         when(groupAppMembership.getRoleId()).thenReturn("APPLICATION_PRIMARY_OWNER");
 
@@ -157,15 +160,15 @@ public class ApplicationService_FindByUserTest {
         when(application.getStatus()).thenReturn(ApplicationStatus.ACTIVE);
         when(application.getType()).thenReturn(ApplicationType.SIMPLE);
         when(application.getApiKeyMode()).thenReturn(ApiKeyMode.UNSPECIFIED);
-        when(application.getEnvironmentId()).thenReturn("envId");
         when(groupApplication.getId()).thenReturn(GROUP_APPLICATION_ID);
         when(groupApplication.getStatus()).thenReturn(ApplicationStatus.ACTIVE);
         when(groupApplication.getType()).thenReturn(ApplicationType.SIMPLE);
         when(groupApplication.getApiKeyMode()).thenReturn(ApiKeyMode.UNSPECIFIED);
-        when(groupApplication.getEnvironmentId()).thenReturn("envId");
 
-        when(membershipService.getMembershipsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION))
-            .thenReturn(Collections.singleton(appMembership));
+        when(
+            membershipService.getReferenceIdsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION)
+        )
+            .thenReturn(Collections.singleton(APPLICATION_ID));
 
         when(membershipService.getMembershipsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.GROUP))
             .thenReturn(Collections.singleton(groupAppMembership));
@@ -175,7 +178,12 @@ public class ApplicationService_FindByUserTest {
         when(roleService.findPrimaryOwnerRoleByOrganization(any(), any())).thenReturn(role);
         when(roleService.findById(any())).thenReturn(role);
 
-        when(applicationRepository.findByIds(any(), any())).thenReturn(new HashSet(Arrays.asList(application, groupApplication)));
+        ApplicationCriteria criteria = new ApplicationCriteria.Builder()
+            .ids(Set.of(APPLICATION_ID))
+            .environmentIds(Set.of(GraviteeContext.getExecutionContext().getEnvironmentId()))
+            .status(ApplicationStatus.ACTIVE)
+            .build();
+        when(applicationRepository.search(criteria, null, null)).thenReturn(new Page<>(List.of(application, groupApplication), 1, 2, 2));
 
         MembershipEntity poApp = new MembershipEntity();
         poApp.setId("poApp-id");
@@ -206,21 +214,23 @@ public class ApplicationService_FindByUserTest {
     @Test
     public void shouldFindByUserWithSortable() throws Exception {
         GraviteeContext.setCurrentEnvironment("envId");
-        when(appMembership.getReferenceId()).thenReturn(APPLICATION_ID);
         when(application.getId()).thenReturn(APPLICATION_ID);
         when(application.getStatus()).thenReturn(ApplicationStatus.ACTIVE);
         when(application.getType()).thenReturn(ApplicationType.SIMPLE);
         when(application.getApiKeyMode()).thenReturn(ApiKeyMode.UNSPECIFIED);
-        when(membershipService.getMembershipsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION))
-            .thenReturn(Collections.singleton(appMembership));
         when(
-            applicationRepository.findByIds(
-                Collections.singletonList(APPLICATION_ID),
-                new SortableBuilder().field("name").setAsc(true).build()
-            )
+            membershipService.getReferenceIdsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION)
         )
-            .thenReturn(Collections.singleton(application));
-        when(application.getEnvironmentId()).thenReturn("envId");
+            .thenReturn(Collections.singleton(APPLICATION_ID));
+
+        ApplicationCriteria criteria = new ApplicationCriteria.Builder()
+            .ids(Set.of(APPLICATION_ID))
+            .environmentIds(Set.of(GraviteeContext.getExecutionContext().getEnvironmentId()))
+            .status(ApplicationStatus.ACTIVE)
+            .build();
+        when(applicationRepository.search(criteria, null, new SortableBuilder().field("name").setAsc(true).build()))
+            .thenReturn(new Page<>(List.of(application), 1, 2, 2));
+
         when(roleService.findPrimaryOwnerRoleByOrganization(any(), any())).thenReturn(mock(RoleEntity.class));
 
         MembershipEntity po = new MembershipEntity();
@@ -242,9 +252,69 @@ public class ApplicationService_FindByUserTest {
         Assert.assertEquals(APPLICATION_ID, apps.iterator().next().getId());
     }
 
-    @Test(expected = TechnicalManagementException.class)
-    public void shouldThrowTechnicalManagementException() throws TechnicalException {
-        when(applicationRepository.findByGroups(any(), any())).thenThrow(new TechnicalException());
-        applicationService.findByUser(GraviteeContext.getExecutionContext(), USERNAME, new SortableImpl("name", true));
+    @Test
+    public void shouldFindIdsByUser() throws Exception {
+        GraviteeContext.setCurrentEnvironment("envId");
+
+        when(
+            membershipService.getReferenceIdsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION)
+        )
+            .thenReturn(Collections.singleton(APPLICATION_ID));
+
+        ApplicationCriteria criteria = new ApplicationCriteria.Builder()
+            .ids(Set.of(APPLICATION_ID))
+            .environmentIds(Set.of(GraviteeContext.getExecutionContext().getEnvironmentId()))
+            .status(ApplicationStatus.ACTIVE)
+            .build();
+        when(applicationRepository.searchIds(criteria, null)).thenReturn(Set.of(APPLICATION_ID));
+
+        MembershipEntity po = new MembershipEntity();
+        po.setMemberId(USERNAME);
+        po.setMemberType(MembershipMemberType.USER);
+        po.setReferenceId(APPLICATION_ID);
+        po.setReferenceType(MembershipReferenceType.APPLICATION);
+        po.setRoleId("APPLICATION_PRIMARY_OWNER");
+
+        Set<String> apps = applicationService.findIdsByUser(GraviteeContext.getExecutionContext(), USERNAME);
+
+        Assert.assertNotNull(apps);
+        Assert.assertFalse("should find app", apps.isEmpty());
+        Assert.assertEquals(APPLICATION_ID, apps.iterator().next());
+    }
+
+    @Test
+    public void shouldFindIdsByUserAndPermission() throws Exception {
+        GraviteeContext.setCurrentEnvironment("envId");
+
+        when(
+            membershipService.getReferenceIdsByMemberAndReference(MembershipMemberType.USER, USERNAME, MembershipReferenceType.APPLICATION)
+        )
+            .thenReturn(Collections.singleton(APPLICATION_ID));
+
+        ApplicationCriteria criteria = new ApplicationCriteria.Builder()
+            .ids(Set.of(APPLICATION_ID))
+            .environmentIds(Set.of(GraviteeContext.getExecutionContext().getEnvironmentId()))
+            .status(ApplicationStatus.ACTIVE)
+            .build();
+        when(applicationRepository.searchIds(criteria, null)).thenReturn(Set.of(APPLICATION_ID));
+
+        MembershipEntity po = new MembershipEntity();
+        po.setMemberId(USERNAME);
+        po.setMemberType(MembershipMemberType.USER);
+        po.setReferenceId(APPLICATION_ID);
+        po.setReferenceType(MembershipReferenceType.APPLICATION);
+        po.setRoleId("APPLICATION_PRIMARY_OWNER");
+
+        Set<String> apps = applicationService.findIdsByUserAndPermission(
+            GraviteeContext.getExecutionContext(),
+            USERNAME,
+            null,
+            RolePermission.APPLICATION_SUBSCRIPTION,
+            RolePermissionAction.READ
+        );
+
+        Assert.assertNotNull(apps);
+        Assert.assertFalse("should find app", apps.isEmpty());
+        Assert.assertEquals(APPLICATION_ID, apps.iterator().next());
     }
 }
